--- a/src/app/test-pins/test-pins.component.html
+++ b/src/app/test-pins/test-pins.component.html
@@ -1,1 +1,18 @@
-<div id='map' style='width: 1000px; height: 100vh;'></div>
+<div class="row vh-100">
+  <div class="col-8">
+    <div id="map" class="w-100 h-100"></div>
+  </div>
+  <div class="col-4">
+    <h2 class="p-4">
+      Flood Risk: <span style="color: red;">HIGH</span>
+    </h2>
+    <ul class="list-group">
+      <div class="list-group-item list-group-item-action" *ngFor="let marker of poi" (click)="flyto(marker)">
+        <div>
+          {{ marker.name }}
+        </div>
+        <small>{{ marker.address }}</small>
+      </div>
+    </ul>
+  </div>
+</div>
